add amount to query parameter
